# cassandra-market-research

./: .gitignore  .woodpecker.yaml  CLAUDE.md  README.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/src/cassandra_fmp/: config.py  main.py  mcp_server.py
backend/src/cassandra_fmp/clients/: schwab.py  thetadata.py
backend/src/cassandra_fmp/tools/: _endpoint_registry.py  _helpers.py  assets.py  auctions.py  cot.py  economy.py  edgar.py  esg.py  financials.py  llm.py  macro.py  market.py  meta.py  news.py  options.py  overview.py  ownership.py  scanner.py  transcripts.py  valuation.py  workflows.py
backend/tests/: conftest.py  test_auctions.py  test_live.py  test_meta_tools.py  test_new_tools.py  test_polygon_tools.py  test_tools.py  test_workflows.py
theta-terminal/: Dockerfile  entrypoint.sh
