[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cassandra-fmp"
version = "0.1.0"
description = "Financial Market Data MCP Server"
requires-python = ">=3.12"
dependencies = [
    "cassandra-mcp-auth @ git+https://github.com/Cassandras-Edge/cassandra-auth.git@6d3e8a9#subdirectory=python",
    "fastmcp[code-mode]>=3.2.0",
    "fmp-data==2.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "toon-llm>=1.0.0b6",
    "edgartools>=4.0.1",
    "openai>=1.0.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "python-dotenv", "respx"]

[project.scripts]
cassandra-fmp = "cassandra_fmp.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: live integration tests against real APIs",
    "live_smoke: fast representative subset of live tests",
    "live_full: full live e2e coverage including all tools and branch cases",
]
